--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   },
   "dependencies": {
     "autoprefixer": "^10.2.3",
+    "lodash": "^4.17.20",
     "next": "10.0.5",
     "postcss": "^8.2.4",
     "react": "17.0.1",
-    "react-dom": "17.0.1",
     "tailwindcss": "^2.0.2"
   }
 }
