--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "autoprefixer": "^10.2.3",
     "d3": "^6.5.0",
     "lodash": "^4.17.20",
-    "next": "10.0.5",
+    "next": "^10.0.5",
     "next-images": "^1.7.0",
     "postcss": "^8.2.4",
-    "react": "17.0.1",
+    "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "sharer.js": "^0.4.1",
     "tailwindcss": "^2.0.2",
-    "topojson": "^3.0.2"
+    "topojson-client": "^3.1.0"
   }
 }
