Update home and intro page

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "postcss": "^8.2.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "sharer.js": "^0.4.1",
+    "react-share": "^4.3.1",
+    "sass": "^1.32.8",
+    "swiper": "^6.4.15",
     "tailwindcss": "^2.0.2",
     "topojson-client": "^3.1.0"
   }
