--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "lodash": "^4.17.20",
     "next": "^10.0.5",
     "next-images": "^1.7.0",
+    "numeral": "^2.0.6",
     "postcss": "^8.2.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-share": "^4.3.1",
+    "react-transition-group": "^4.4.1",
     "sass": "^1.32.8",
     "swiper": "^6.4.15",
     "tailwindcss": "^2.0.2",
