--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export",
+    "generate": "next build && next export"
   },
   "dependencies": {
     "autoprefixer": "^10.2.3",
