--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "numeral": "^2.0.6",
     "postcss": "^8.2.4",
     "react": "^17.0.1",
+    "react-device-detect": "^1.15.0",
     "react-dom": "^17.0.1",
     "react-share": "^4.3.1",
     "react-transition-group": "^4.4.1",
