--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,5 +5,7 @@
   "title": "BKK Follow-Up สำรวจปัญหากวนใจชาว กทม.",
   "description": "เปิดข้อมูลย้อนหลัง ฝุ่น น้ำท่วม ขยะ มลพิษ และสิ่งที่ติดค้างใจคน กทม.",
   "web_url": "https://bkk-followup.netlify.app/",
-  "og_image": "og_main.jpg"
+  "og_main": "og_main.jpg",
+  "og_budget": "og_budget.jpg",
+  "og_responsibility": "og_responsibility.jpg"
 }
