Add Dashboard Og image

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,5 +7,10 @@
   "web_url": "https://bkk-followup.netlify.app/",
   "og_main": "og_main.jpg",
   "og_budget": "og_budget.jpg",
+  "og_air": "og_air.jpg",
+  "og_green": "og_green.jpg",
+  "og_waste": "og_waste.jpg",
+  "og_water": "og_water.jpg",
+  "og_flood": "og_flood.jpg",
   "og_responsibility": "og_responsibility.jpg"
 }
