Add og overview

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -12,5 +12,6 @@
   "og_waste": "og_waste.jpg",
   "og_water": "og_water.jpg",
   "og_flood": "og_flood.jpg",
+  "og_overall": "og_overall.jpg",
   "og_responsibility": "og_responsibility.jpg"
 }
