--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export",
-    "generate": "next build && next export"
+    "export": "next export  -o out/bkk-election",
+    "generate": "next build && next export -o out/bkk-election"
   },
   "dependencies": {
     "autoprefixer": "^10.2.3",
